# CI_CD_lab

./: CMakeLists.txt  README.md  factorial.cpp  factorial.hpp  factorialTest.cpp  user_exception.cpp  user_exception.hpp
.github/workflows/: cmake.yml
